--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "classnames": "^2.5.1",
+    "framer-motion": "^11.0.3",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "swiper": "^11.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
