--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.3",
     "js-cookie": "^3.0.5",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
